# api_esportes

./: settings.gradle.kts
app/: build.gradle
app/release/: output-metadata.json
app/release/baselineProfiles/0/: app-release.dm
app/release/baselineProfiles/1/: app-release.dm
app/src/androidTest/java/com/diegodev/apidesportes/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  api_esportes.cpp
app/src/main/java/com/diegodev/apidesportes/jogos/: ActivityEsporte.java
app/src/main/java/com/diegodev/apidesportes/jogos/adapter/: AdpterCat.java  DataAdapter.java  JogosAdapter.java
app/src/main/java/com/diegodev/apidesportes/jogos/callback/: dja.java  (+3 more)
app/src/main/res/drawable/: bg_data_item.xml  bg_typejogo.xml  ic_arrow_down_white.xml  ic_arrow_left_white.xml  ic_arrow_right_white.xml  ic_arrow_up_white.xml  selector_home_navigation.xml  sport_sel.xml  sport_selector.xml  sport_selector1.xml
app/src/main/res/layout/: activity_expired.xml  activity_jogos.xml  activity_main.xml  activity_teste.xml  api_expired.xml  categoryondeman.xml  frame_esportes.xml  game_item.xml  game_item1.xml  item_data.xml  jogoscamp.xml
app/src/main/res/raw/: jogador.json  listavazia.json  loadigsocer.json  loadigsocer1.json  loading.json  loading1.json  prograssbar.json  scanning.json  soccer.json
app/src/main/res/values/: colors.xml  strings.xml  styles.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/diegodev/apidesportes/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
(+14 files in other folders)
